Fix overlapping timestamps on empty messages (#8205)
* added min-height for event line

* Requested changes done

* Changes done

* fixing failing tests

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -317,6 +317,7 @@ $left-gutter: 64px;
         .mx_EventTile_line {
             /* ideally should be 100px, but 95px gives us a max thumbnail size of 800x600, which is nice */
             margin-right: 110px;
+            min-height: $font-14px;
         }
 
         .mx_ThreadInfo {
